# football-elo-odds

./: .gitignore  CODE_QUALITY_AUDIT.md  FEATURE_PROPOSALS.md  Makefile  README.md  app.py  config.py  data_fetch.py  ev_calculator.py  kambi_client.py  logging_config.py  odds.py  pyproject.toml  requirements.txt  style.css  team_mapping_db.py
.streamlit/: config.toml
data/: league_stats.json
docs/: revamp_plan.md
src/football_elo_odds/: __init__.py  errors.py
src/football_elo_odds/app/: __init__.py  error_mapper.py
src/football_elo_odds/domain/: __init__.py  models.py  odds_engine.py
src/football_elo_odds/services/: __init__.py  match_analysis.py
tests/: __init__.py  conftest.py  test_ev_calculator.py  test_kambi_client.py  test_odds.py  test_revamp_match_analysis.py
